--- a/package.json
+++ b/package.json
@@ -5,16 +5,25 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "webpack": "webpack --mode development --watch"
   },
   "author": "alex zamora",
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.4",
     "mongoose": "^5.3.15",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3"
   },
   "devDependencies": {
-    "nodemon": "^1.18.7"
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "nodemon": "^1.18.7",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2"
   }
 }
